styles: fix mobile dog alignment

--- a/src/scss/_structure.scss
+++ b/src/scss/_structure.scss
@@ -2,7 +2,6 @@ body {
   margin: 0 1rem;
   max-width: 48rem;
   min-height: 100vh;
-  padding-bottom: 200px;
   position: relative;
 
   @include clearfix;
